WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27466
Search boxes should fallback when the RenderTheme doesn't deal with them
https://bugs.webkit.org/show_bug.cgi?id=27466
Summary
Search boxes should fallback when the RenderTheme doesn't deal with them
Adam Langley
Reported
2009-07-20 15:55:04 PDT
<input type="search"> is very much like a text entry except that, currently, if the RenderTheme doesn't deal with it, nothing is rendered. With this patch, the default CSS border is rendered if the RenderTheme requests it.
Attachments
patch
(1.44 KB, patch)
2009-07-20 15:58 PDT
,
Adam Langley
eric
: review-
Details
Formatted Diff
Diff
patch
(1.77 KB, patch)
2009-07-20 19:57 PDT
,
Adam Langley
eric
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adam Langley
Comment 1
2009-07-20 15:58:00 PDT
Created
attachment 33118
[details]
patch
Eric Seidel (no email)
Comment 2
2009-07-20 19:28:30 PDT
Comment on
attachment 33118
[details]
patch Change looks fine. Fix the fallthrough issue and re-post. :)
Adam Langley
Comment 3
2009-07-20 19:57:05 PDT
Created
attachment 33139
[details]
patch
Eric Seidel (no email)
Comment 4
2009-07-20 19:59:44 PDT
Comment on
attachment 33139
[details]
patch Your changelog is unclear. This is already covered by many layout tests. It's just that chromium layout test results are not stored in the webkit tree. Your comment currently sounds like you're adding new tests, but only to the chromium tree, which makes no sense. ;) please adjust the commnet when landing.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug