third_party/WebKit/WebCore/rendering/RenderTheme.cpp
@@ -320,6 +320,7 @@ bool RenderTheme::paintBorderOnly(RenderObject* o, const RenderObject::PaintInfo
         case TextAreaPart:
             return paintTextArea(o, paintInfo, r);
         case MenulistButtonPart:
+        case SearchFieldPart:
             return true;
         case CheckboxPart:
         case RadioPart:
@@ -332,7 +333,6 @@ bool RenderTheme::paintBorderOnly(RenderObject* o, const RenderObject::PaintInfo
         case SliderVerticalPart:
         case SliderThumbHorizontalPart:
         case SliderThumbVerticalPart:
-        case SearchFieldPart:
         case SearchFieldCancelButtonPart:
         case SearchFieldDecorationPart:
         case SearchFieldResultsDecorationPart:
